поиск происходит быстрее, т.к. data собирается в многопоточном режиме методы оптимизированы и урезаны до 30 строк